use node-uuid as curr.uid is not unique

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "url": "git://github.com/peterbraden/ical.js.git"
   },
   "dependencies": {
+    "node-uuid": "^1.4.8",
     "request": "^2.81.0",
     "rrule": "2.1.0"
   },
